@@ -134,7 +134,7 @@ IF( ${CMAKE_SYSTEM_NAME} MATCHES Darwin )
     SET( MANPAGE_ENTRY_PATH ${CMAKE_INSTALL_PREFIX}/${APP_NAME_GLOBAL}.app/Contents/man/man1 )
     SET( LIBS_ENTRY_PATH ${CMAKE_INSTALL_PREFIX}/${APP_NAME_GLOBAL}.app/Contents/Frameworks )
     SET( APPS_ENTRY_PATH ${CMAKE_INSTALL_PREFIX}/${APP_NAME_GLOBAL}.app/Contents/MacOS )
-    SET( I18N_ENTRY_PATH ${CMAKE_INSTALL_PREFIX}/${APP_NAME_GLOBAL}.app/Contents/i18n )
+    SET( L10N_ENTRY_PATH ${CMAKE_INSTALL_PREFIX}/${APP_NAME_GLOBAL}.app/Contents/l10n )
 
     SET( WITH_ICOUTILS OFF )
 ELSE( ${CMAKE_SYSTEM_NAME} MATCHES Darwin )
@@ -144,9 +144,13 @@ ELSE( ${CMAKE_SYSTEM_NAME} MATCHES Darwin )
     IF( NOT THEMES_ENTRY_PATH )
         SET( THEMES_ENTRY_PATH ${CMAKE_INSTALL_PREFIX}/share/q4wine )
     ENDIF( NOT THEMES_ENTRY_PATH )
-    IF( NOT I18N_ENTRY_PATH )
-        SET( I18N_ENTRY_PATH ${CMAKE_INSTALL_PREFIX}/share/q4wine/i18n )
-    ENDIF( NOT I18N_ENTRY_PATH )
+    IF( I18N_ENTRY_PATH )
+	MESSAGE(WARNING "-DI18N_ENTRY_PATH is obsolete. Use -DL10N_ENTRY_PATH instead.")
+	SET( L10N_ENTRY_PATH ${I18N_ENTRY_PATH} )
+    ENDIF( I18N_ENTRY_PATH )
+    IF( NOT L10N_ENTRY_PATH )
+        SET( L10N_ENTRY_PATH ${CMAKE_INSTALL_PREFIX}/share/q4wine/l10n )
+    ENDIF( NOT L10N_ENTRY_PATH )
     IF( NOT APPS_ENTRY_PATH )
         SET( APPS_ENTRY_PATH ${CMAKE_INSTALL_PREFIX}/bin )
     ENDIF( NOT APPS_ENTRY_PATH )
@@ -354,7 +358,7 @@ add_subdirectory(data)
 add_subdirectory(theme)
 add_subdirectory(icons)
 add_subdirectory(man1)
-add_subdirectory(i18n)
+add_subdirectory(l10n)
 
 IF (${CMAKE_SYSTEM_NAME} MATCHES FreeBSD)
     add_subdirectory(freebsd)
