@@ -26,7 +26,7 @@ SET( Q4WINE_CLI_HEADERS
     ${CMAKE_SOURCE_DIR}/src/q4wine-gui/process.h
 )
 
-ADD_EXECUTABLE( q4wine-cli ${Q4WINE_CLI_SOURCES} ${Q4WINE_CLI_HEADERS} ${QM_I18N} ${Q4WINE_LIB_UI_HEADERS} ${Q4WINE_LIB_LIB_MOC_SOURCES} )
+ADD_EXECUTABLE( q4wine-cli ${Q4WINE_CLI_SOURCES} ${Q4WINE_CLI_HEADERS} ${QM_L10N} ${Q4WINE_LIB_UI_HEADERS} ${Q4WINE_LIB_LIB_MOC_SOURCES} )
 add_dependencies( q4wine-cli translations_build )
 
 IF (${CMAKE_SYSTEM_NAME} MATCHES FreeBSD)
