@@ -51,7 +51,7 @@ ENDIF( QT5 )
 ADD_EXECUTABLE( q4wine-helper ${Q4WINE_HELPER_SOURCES}
     ${Q4WINE_HELPER_UI_HEADERS} ${Q4WINE_LIB_UI_HEADERS}
     ${Q4WINE_LIB_LIB_MOC_SOURCES} ${Q4WINE_HELPER_LIB_MOC_SOURCES}
-    ${Q4WINE_HELPER_HEADERS} ${QM_I18N} )
+    ${Q4WINE_HELPER_HEADERS} ${QM_L10N} )
 
 add_dependencies( q4wine-helper translations_build )
 
